panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__typedef__test_error_redeclaration_with_different_identifier_kind.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/typedef/test_error_redeclaration_with_different_identifier_kind.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: `typedef` name `global` redeclared as value name
   ╭─[panko/tests/cases/typedef/test_error_redeclaration_with_different_identifier_kind.c:2:5]
   │
 1 │ typedef int global;
   │ ─────┬─────  
   │      ╰─────── originally declared here as a `typedef` name
 2 │ int global;
   │     ───┬──  
   │        ╰──── redeclared here as a value name
───╯

Error: value name `another_global` redeclared as `typedef` name
   ╭─[panko/tests/cases/typedef/test_error_redeclaration_with_different_identifier_kind.c:5:1]
   │
 4 │ int another_global;
   │     ───────┬──────  
   │            ╰──────── originally declared here as a value name
 5 │ typedef int another_global;
   │ ─────┬─────  
   │      ╰─────── redeclared here as a `typedef` name
───╯

Error: `typedef` name `local` redeclared as value name
   ╭─[panko/tests/cases/typedef/test_error_redeclaration_with_different_identifier_kind.c:9:9]
   │
 8 │     typedef int local;
   │     ─────┬─────  
   │          ╰─────── originally declared here as a `typedef` name
 9 │     int local;
   │         ──┬──  
   │           ╰──── redeclared here as a value name
───╯

Error: value name `another_local` redeclared as `typedef` name
    ╭─[panko/tests/cases/typedef/test_error_redeclaration_with_different_identifier_kind.c:12:5]
    │
 11 │     int another_local;
    │         ──────┬──────  
    │               ╰──────── originally declared here as a value name
 12 │     typedef int another_local;
    │     ─────┬─────  
    │          ╰─────── redeclared here as a `typedef` name
────╯
